--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Etch & Sketch</title>
 		<meta charset="UTF-8">
-		<!--link rel="stylesheet" href="styles.css"-->
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-
+		<div class ="grid-container"></div>
 
 		<script src="script.js"></script>
 	</body>
