--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
+		<button class='button-newGrid'>New Grid</button>
 		<div class ="grid-container"></div>
 
 		<script src="script.js"></script>
