--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<button class='button-newGrid'>New Grid</button>
+		<button class='button-new-grid'>New Grid</button>
 
-		<dialog open id="size-of-grid">
+		<dialog id="size-of-grid">
 			<form method="dialog">
 				<label for="height">Number of squares in the vertical side (1 to 100)</label>
 				<input type="number" id="height" max="100" min="1">
