--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 			<form method="dialog">
 				<label for="height">Number of squares in the vertical side (1 to 100)</label>
 				<input type="number" id="height" max="100" min="1">
-				<label for="lenght">Number of squares in the horizontal side (1 to 100)</label>
-				<input type="number" id="lenght" max="100" min="1">
-				<button>OK</button>	
+
+				<label for="length">Number of squares in the horizontal side (1 to 100)</label>
+				<input type="number" id="length" max="100" min="1">
+
+				<button id="button-ok">OK</button>	
 			</form>
 			
 		</dialog>
